# rust-para-sistemas-embarcados

./: LICENSE  README.md
stm32f103/: .gdbinit  .gitignore  Cargo.toml  memory.x  openocd.cfg
stm32f103/.cargo/: config
stm32f103/src/: main.rs
