[package]
name = "stm32f103"
version = "0.1.0"
description = "Basic demo using only cortex M features"
authors = ["Marcelo Barros de Almeida <marcelobarrosalmeida@gmail.com>"]
license = "MIT"

#[profile.dev]
#codegen-units = 1
#incremental = false

[profile.release]
lto = true
debug = true

[dependencies]
cortex-m = "0.4.0"
cortex-m-semihosting = "0.2.0"
f3 = "0.5.3"

[dependencies.cortex-m-rt]
version = "0.3.12"
features = ["abort-on-panic"]

