[package]
name = "stm32f103"
version = "0.2.0"
description = "Basic demo using only cortex M features"
authors = ["Marcelo Barros de Almeida <marcelobarrosalmeida@gmail.com>"]
license = "MIT"

[profile.release]
lto = true
debug = true
panic = "abort"

[profile.dev]
panic = "abort"
#codegen-units = 1
#incremental = false

[dependencies]
cortex-m = "0.4.3"
cortex-m-rt = "0.4.0"
cortex-m-semihosting = "0.2.0"
panic-semihosting = "0.1.0"
#f3 = "0.5.3"
